--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="css/object.css" rel="stylesheet">
     <script src="js/object.js"></script>
+    <link rel="icon" href="img/favicon.png">
     <!--font-->
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500;600&display=swap" rel="stylesheet">
     <!--bxslider-->
