유효성 검사 수정

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,16 +26,16 @@
                 </ul>
             </div>
             <div id="left-control">
-                <div class="box"><button type="button" class="time"><img src="img/time.gif"></button></div>
-                <div class="box"><button type="button" class="up" onclick="pageUp()"><img src="img/up.gif"></button></div>
-                <div class="box"><button type="button" class="down" onclick="pageDown()"><img src="img/down.gif"></button></div>
+                <div class="box"><button type="button" class="time"><img alt="시간 아이콘" src="img/time.gif"></button></div>
+                <div class="box"><button type="button" class="up" onclick="pageUp()"><img alt="페이지 위로가기" src="img/up.gif"></button></div>
+                <div class="box"><button type="button" class="down" onclick="pageDown()"><img alt="페이지 아래로 가기" src="img/down.gif"></button></div>
             </div>
             <div id="left-sns">
-                <div class="sns"><img src="img/kakao.png"></div>
-                <div class="sns"><img src="img/naver.png"></div>
+                <div class="sns"><img alt="카카오톡 아이콘" src="img/kakao.png"></div>
+                <div class="sns"><img alt="네이버 톡톡 아이콘" src="img/naver.png"></div>
             </div>
         <div class="inner">
-            <div class="logo"><a href="#"><img src="img/top_logo.gif"></a></div>
+            <div class="logo"><a href="#"><img alt="로고" src="img/top_logo.gif"></a></div>
             <div class="search">
                 <div class="my">
                     <ul>
@@ -46,7 +46,7 @@
                         <li><a href="#">STORE</a></li>
                     </ul>
                 </div>
-                <img src="img/search_icon.png">
+                <img alt="검색" src="img/search_icon.png">
             </div>
         </div>
     </header>
@@ -96,7 +96,7 @@
         <div class="inner">
             <div class="slider">
                 <div class="slide">
-                    <img src="img/slide01.jpg">
+                    <img alt="메인이미지1" src="img/slide01.jpg">
                     <div class="slide-title">
                         <span>gcolon book</span>
                         <h1>지콜론북 시네마 베이커리</h1>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="img/slide02.jpg">
+                    <img alt="메인이미지2" src="img/slide02.jpg">
                     <div class="slide-title">
                         <span>gcolon book</span>
                         <h1>지콜론북 시네마 베이커리</h1>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="img/slide03.jpg">
+                    <img alt="메인이미지3" src="img/slide03.jpg">
                     <div class="slide-title">
                         <span>gcolon book</span>
                         <h1>지콜론북 시네마 베이커리</h1>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="img/slide04.jpg">
+                    <img alt="메인이미지4" src="img/slide04.jpg">
                     <div class="slide-title">
                         <span>gcolon book</span>
                         <h1>지콜론북 시네마 베이커리</h1>
@@ -128,15 +128,15 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="img/slide05.jpg">
+                    <img alt="메인이미지5" src="img/slide05.jpg">
                     <div class="slide-title">
                         <span>gcolon book</span>
                         <h1>지콜론북 시네마 베이커리</h1>
                         <p>지콜론북의 새로운 책'시네마 베이커리'서교점에서 만나요!</p>
                     </div>
                 </div>              
-                <!--<div id="prev"><img src="img/btnprev.png"></div>
-                <div id="next"><img src="img/btnnext.png"></div> -->
+                <!--<div id="prev"><img alt="" src="img/btnprev.png"></div>
+                <div id="next"><img alt="" src="img/btnnext.png"></div> -->
             </div> <!--slider-->
         </div> <!--inner-->
     </section>
@@ -147,7 +147,7 @@
             <div class="flex-inner">
             <div class="ex-box">
             <a href="#">
-                <img src="img/ex01.jpg">
+                <img alt="전시회1" src="img/ex01.jpg">
                 <p>EXHIBITION <span>2022.01.08~2022.02.02</span></p>
                 <p class="ex-title">백조맨숀</p>
                 <p>오래된 보물들이 가득한 백조맨숀으로 놀러오세요!</p>
@@ -155,7 +155,7 @@
             </div>
             <div class="ex-box">
             <a href="#">
-                <img src="img/ex02.jpg">
+                <img alt="전시회2" src="img/ex02.jpg">
                 <p>EXHIBITION <span>2022.01.08~2022.02.02</span></p>
                 <p class="ex-title">WITH YOU</p>
                 <p>소중한 사람들에게 따뜻한 마음을 나눠보세요!</p>
@@ -163,7 +163,7 @@
             </div>
             <div class="ex-box">
             <a href="#">    
-                <img src="img/ex03.jpg">
+                <img alt="전시회3" src="img/ex03.jpg">
                 <p class="span">EXHIBITION <span>2022.01.08~2022.02.02</span></p>
                 <p class="ex-title">CAT DOG PEOPLE</p>
                 <p>일상에서 만난 고양이, 강아지 사람들의 순간!</p>
@@ -362,33 +362,33 @@
         <div class="event-group">
         <div class="event-wrap">
             <div class="event-contents">
-                <img src="img/event1.jpg">
+                <img alt="이벤트1" src="img/event1.jpg">
             </div>
             <div class="event-text">
                 <span>BREAND</span>
-                <h1>피스코리아 아티스트 콜라보 패키지</h2>
+                <h2>피스코리아 아티스트 콜라보 패키지</h2>
                 <p>피스코리아 x 웜그레이테일</p>
                 <button class="event-btn">MORE</button>
             </div>
         </div>
         <div class="event-wrap"  id="color2">
             <div class="event-contents">
-                <img src="img/event2.jpg">
+                <img alt="이벤트2" src="img/event2.jpg">
             </div>
             <div class="event-text">
                 <span>BREAND</span>
-                <h1>공장기프트백</h2>
+                <h2>공장기프트백</h2>
                 <p>소중한 사람들에게 전하는 뜻깊은 선물</p>
                 <button class="event-btn">MORE</button>
             </div>
         </div>
         <div class="event-wrap" id="color3">
             <div class="event-contents">
-                <img src="img/event3.jpg">
+                <img alt="이벤트3" src="img/event3.jpg">
             </div>
             <div class="event-text">
                 <span>SPECIAL</span>
-                <h1>에코백 가방 파우치 기획전</h2>
+                <h2>에코백 가방 파우치 기획전</h2>
                 <p>수납과 디자인까지 모두 갖군 에코백 가방 파우치를 만나보세요</p>
                 <button class="event-btn">MORE</button>
             </div>
@@ -406,137 +406,138 @@
         <h3 class="title">REVIEW</h3>
         <div class="flex-inner">
             <div class="re-box">
-                <img src="img/re1.jpg">
+                <img alt="리뷰1" src="img/re1.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰1 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re2.jpg">
+                <img alt="리뷰2" src="img/re2.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰2 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re3.jpg">
+                <img alt="리뷰3" src="img/re3.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰3 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re4.jpg">
+                <img alt="리뷰4" src="img/re4.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰4 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re5.jpg">
+                <img alt="리뷰5" src="img/re5.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰5 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re6.jpg">
+                <img alt="리뷰6" src="img/re6.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                 <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰6 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re7.jpg">
+                <img alt="리뷰7" src="img/re7.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰7 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re8.jpg">
+                <img alt="리뷰8" src="img/re8.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리80 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re9.jpg">
+                <img alt="리뷰9" src="img/re9.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰9 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
 
             <div class="re-box">
-                <img src="img/re10.jpg">
+                <img alt="리뷰10" src="img/re10.jpg">
                 <div class="re-text">
                     <h5 style="margin-left:10px;">다이어리도 다양하게 꾸밀 수 있다는 장점이 있습니다.</h5>
                     <p>다이어리도 다양하게 꾸밀 수 있는 여백이 있어서 사용하기 편한 것 같아요.</p>
                     <span>네**** | 2022-02-21</span>
                     <div class="s-re">
-                        <img src="img/re1.jpg">
+                        <img alt="리뷰10 썸네일" src="img/re1.jpg">
                         <span>[오브젝트] 2022 오브젝트 다이어리</span>
                     </div>
                 </div>
             </div>
         </div><!--flex-inner-->        
-                 <div id="re-btn"><button> 상품리뷰 모두보기</button></div>
-            </div>
+        <div id="re-btn">
+            <button> 상품리뷰 모두보기</button>
+        </div>
         </div>
     </section>
 
@@ -573,10 +574,10 @@
                 </div><!--footer-left-->
 
                 <div class="footer-site">
-                    <img src="img/instargram.gif" class="f-img">
+                    <img alt="인스타그램" src="img/instargram.gif" class="f-img">
                     <ul class="shopping">
                         <li><a href="#">Shopping Quick</a></li>
-                        <li><a href="#"MY PAGE></a></li>
+                        <li><a href="#">MY PAGE</a></li>
                         <li><a href="#">ORDER</a></li>
                         <li><a href="#">WISH LIST</a></li>  
                     </ul>
@@ -585,8 +586,8 @@
                         <li><a href="#">Community</a></li>
                         <li><a href="#">NOTICE</a></li>
                         <li><a href="#">REVIEW</a></li>  
-                        <li><a href href="#">QNA</a></li>
-                        <li><a href href="#">OFFLINE STORE</a></li>
+                        <li><a href="#">QNA</a></li>
+                        <li><a href="#">OFFLINE STORE</a></li>
                         <li><a href="#">MEMBERSHIP</a></li>
                     </ul>
                 </div><!--footer-site-->
